# kernelweave

./: .gitignore  2.0.1  AGENTS.md  CHANGELOG.md  KernelWeave_LLM_Product_Train.py  KernelWeave_Prompt.py  MASTER_DOCUMENTATION.md  PUBLISH.md  README.md  README_AGENT.md  README_RC1.md  SUBMISSION_GUIDE.md  app.py  broken_script.py  continuous_grind.py  index.html  kaggle_setup.py  kernelweave-ollama.bat  kernelweave-ollama.ps1  kernelweave_gui.py  kernelweave_ollama.py  modern_theme.css  pyproject.toml  rupert_evolution_log.md  sales_data.csv  standalone_train.py  test_agent.py  trading_signal.txt
benchmark/: __init__.py  baselines.py  quality.py  real_tasks.py  results_real.json  run_bench.py  run_comprehensive.py  run_toolbench.py  tasks.py
docs/: ADVANCED_VALIDATION.md  ALGORITHM.md  OLLAMA_INTEGRATION.md  RESTRUCTURING_HISTORY.md  index.html
investor/: README.md  architecture.md  changelog.md  cost-model.md  deck-outline.md  faq.md  metrics.md  moat.md  package_manifest.json  pitch.md  problem-solution.md  roadmap.md  timeline.md  v0.md  v1.md  v2.md
kernelweave/: __init__.py  calibration.py  cli.py  cli_rc1.py  compiler.py  constrained.py  kernel.py  metrics.py  model.py  runtime.py
kernelweave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
models/: anthropic-claude-3-5-sonnet.json  ollama-gemma4.json  openai-gpt-4o-mini.json  qwen0_5.json
paper/: build.sh  kernelweave_paper.md  main.tex
phasecd/: README.md  benchmark.json
samples/: README.md  composition_demo.py  frontier_demo.py  product_test.py
store/: index.json
(+125 files in other folders)
